<resources>
    <string name="app_name">S1_WDP_CODE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_text_welcome">XXX 欢迎您</string>
    <string name="login_text_phone">手机号码</string>
    <string name="login_text_password">登录密码</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_service">客服</string>
    <string name="login_text_temppassword">临时密码</string>
    <string name="login_text_forgetpassword">忘记密码</string>
    
    <string name="radiobutton_device">设备</string>
    <string name="radiobutton_ranking">排行</string>
    <string name="radiobutton_music">音乐</string>
    <string name="radiobutton_setting">设置</string>
    <string name="homepage_title">设备信息</string>
    <string name="rank_title">排行榜</string>
    <string name="music_title">音乐</string>
    <string name="set_title">设置</string>
    <string name="text_sport">本组运动量</string>
    <string name="text_sport_rank">本组排行</string>
    <string name="text_group">设备名称</string>
    <string name="text_steps">步数</string>
    <string name="title_activity_team_sport_value">TeamSportValue</string>
    <string name="title_activity_group_rank">GroupRank</string>
    <string name="title_activity_set_hand">SetHand</string>
    <string name="find_password">找回登录密码</string>
    <string name="update_password">修改登录密码</string>
    <string name="text_score">给我评分</string>
    <string name="text_about">关于</string>
    <string name="text_hand">头像</string>
    <string name="text_exit">安全退出</string>
    <string name="title_activity_choose_head">ChooseHead</string>
    <string name="title_activity_device_event">DeviceEvent</string>
    <string name="title_activity_accident_state">AccidentState</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">加载中，请稍后...</string>
    <string name="title_activity_device_message">DeviceMessage</string>
    <string name="device_status">设备状态</string>
    <string name="device_number">设备号</string>
    <string name="device_time">登录时间</string>

</resources>
