<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/rlMineinfoTitle"
        style="@style/title"
        android:text="@string/set_title"/>

    <RelativeLayout
        android:id="@+id/rlMineinfoHead"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
         >

        <ImageView
            android:id="@+id/ivHead"
            style="@style/arrow"/>

        <ImageView
            android:id="@+id/ivHeadPic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ivHead"
            android:scaleType="centerCrop"
            android:background="@mipmap/_head" />

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/text_hand"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="密码管理"
        android:textColor="@color/black"
        android:textSize="12sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textbox"
            android:text="@string/find_password"
            />
        <ImageView
            style="@style/arrow"/>

        <View style="@style/line_horizontal"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textbox"
            android:text="@string/update_password"
            />
        <ImageView
            style="@style/arrow"/>

        <View style="@style/line_horizontal"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/textbox"
            android:text="@string/text_score"
            />
        <ImageView
            style="@style/arrow"/>

        <View style="@style/line_horizontal"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textbox"
            android:text="@string/text_about"
            />
        <ImageView
            android:id="@+id/id_return"
            style="@style/arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/id_return"
            android:textSize="@dimen/font_normal"
            android:text="1.0.0"/>

        <View style="@style/line_horizontal"/>
    </RelativeLayout>


    <Button
        android:id="@+id/btnQuitLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/shapebuttonbackwhite"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_exit"
        android:textSize="@dimen/font_normal"
        android:textColor="#FB1827" />











</LinearLayout>
