<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/device_status"
        style = "@style/title"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        >
        <TextView
            android:text="状态"
            android:textColor="@color/black"
            style="@style/textbox" />


        <TextView
            android:id="@+id/online_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:text="在线"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        >
        <TextView
            android:text="@string/device_number"
            android:textColor="@color/black"
            style="@style/textbox" />


        <TextView
            android:id="@+id/device_num"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:text=""
            android:textSize="18sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        >
        <TextView
            android:text="@string/device_time"
            android:textColor="@color/black"
            style="@style/textbox" />


        <TextView
            android:id="@+id/device_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:text=""
            android:textSize="18sp"
            />
    </RelativeLayout>





</LinearLayout>
